[project]
name = "sarima-lstm-fbprophet"
version = "0.1.0"
description = "Comparing between SARIMA, SARIMAX, FBPROPHET, LSTM, CNN-LSTM Forecasting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "prophet>=1.2.1",
    "pyqt5>=5.15.11; sys_platform == 'linux'",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
